tests/fixtures/invalid/llbrace.stderr
TOML parse error at line 1, column 3
  |
1 | [ [table]]
  |   ^
Unexpected `[`
Unexpected ` `
While parsing a Table Header
